--- a/scss/modules/_nav.scss
+++ b/scss/modules/_nav.scss
@@ -11,13 +11,13 @@
   .nav__inner {
     @extend .ext-grid;
     background-color: $colourBackground;
-    width: 50%;
     height: $gridSize * 5;
     pointer-events: all;
     transition: $transitionSlow;
     user-select: none;
     border-bottom: $border;
     position: relative;
+    width: 50%;
 
     .list {
       position: absolute;
@@ -69,6 +69,22 @@
         opacity: 1;
         pointer-events: all;
         transform: translateX(0);
+      }
+    }
+  }
+
+  @media screen and (max-width: $tablet) {
+    .nav__inner {
+      width: 55%;
+    }
+  }
+
+  @media screen and (max-width: $mobile) {
+    .nav__inner {
+      width: 100%;
+
+      .list {
+        padding-left: $space * 2;
       }
     }
   }
