--- a/scss/modules/_section.scss
+++ b/scss/modules/_section.scss
@@ -50,7 +50,6 @@
   ul {
     @include margin(0, 2);
     padding-left: $space * 2;
-    padding-left: $space * 2;
     border-left: $border;
     font-size: $fontLarge;
   }
@@ -76,6 +75,20 @@
           color: $colourAlt;
         }
       }
+    }
+  }
+
+  @media screen and (max-width: $tablet) {
+    padding-right: $gridSize * 3;
+    padding-bottom: $gridSize * 2;
+  }
+
+  @media screen and (max-width: $tablet) {
+    @include pad(2, 2);
+    //padding-top: 0;
+
+    p {
+      font-size: 95%;
     }
   }
 }
