--- a/scss/modules/_index.scss
+++ b/scss/modules/_index.scss
@@ -5,8 +5,7 @@
 @import 'pane-gallery_gallery-menu';
 @import 'pane-gallery_artwork-info';
 @import 'pane-content';
-@import 'pages';
 @import 'nav';
-@import 'section';
+@import 'pane-content_section';
 @import 'logo-main';
 @import 'pages/index';
