--- a/scss/modules/_pane-gallery.scss
+++ b/scss/modules/_pane-gallery.scss
@@ -56,4 +56,25 @@
       height: auto;
     }
   }
+
+  @media screen and (max-width: $mobileLandscape) {
+    .close-gallery-button {
+      margin-top: $gridSize;
+      margin-left: $gridSize;
+      width: 40px;
+      height: 40px;
+    }
+  }
+
+  @media screen and (max-width: $mobile) {
+    .close-gallery-button {
+      display: none;
+    }
+  }
+}
+
+@media screen and (max-width: $mobile) {
+  #nav-gallery {
+    justify-content: center;
+  }
 }
