--- a/scss/modules/_pane-content.scss
+++ b/scss/modules/_pane-content.scss
@@ -8,6 +8,42 @@
 
     .pages {
       width: 50%;
+      min-height: 102vh;
+      position: relative;
+      flex-direction: column;
+      justify-content: flex-start;
+
+      .page {
+        width: 100%;
+        top: 0;
+        left: 0;
+        height: 0;
+        overflow: hidden;
+        opacity: 0;
+        pointer-events: none;
+        padding-top: 0;
+        transition: opacity $transition;
+
+        &.active {
+          padding-top: $gridSize * 8;
+          height: auto;
+          overflow: auto;
+          opacity: 1;
+          pointer-events: all;
+
+          @media screen and (max-width: $mobileLandscape) {
+            padding-top: $gridSize * 5;
+          }
+
+          @media screen and (max-width: $mobile) {
+            padding-top: $gridSize * 6;
+          }
+        }
+
+        &.display-none {
+          display: none;
+        }
+      }
     }
   }
 
@@ -15,6 +51,14 @@
     .pane__inner {
       .pages {
         width: 55%;
+      }
+    }
+  }
+
+  @media screen and (max-width: $mobileLandscape) {
+    .pane__inner {
+      .pages {
+        width: 60%;
       }
     }
   }
