--- a/scss/modules/_pane-gallery_gallery-menu.scss
+++ b/scss/modules/_pane-gallery_gallery-menu.scss
@@ -136,4 +136,30 @@
   #artwork-target {
     width: 50vw;
   }
+
+  @media screen and (max-width: $mobile) {
+    .menu {
+      width: 80vw;
+
+      .content {
+        flex-direction: column;
+
+        .item {
+          width: 100%;
+          display: flex;
+          flex-direction: row;
+
+          .control-img {
+            width: 40%;
+            @include pad(1, 0);
+          }
+
+          .text {
+            width: 60%;
+            text-align: left;
+          }
+        }
+      }
+    }
+  }
 }
