prevent some default behavs

--- a/scss/modules/_pane-gallery.scss
+++ b/scss/modules/_pane-gallery.scss
@@ -20,6 +20,7 @@
       position: relative;
       cursor: crosshair;
       box-shadow: $boxShadow;
+      touch-action: none;
 
       &.clickable {
         cursor: pointer;
