--- a/scss/modules/_index.scss
+++ b/scss/modules/_index.scss
@@ -1,11 +1,13 @@
 @import 'global';
 @import 'pane';
-@import 'pane-gallery';
-@import 'pane-gallery_controls';
-@import 'pane-gallery_gallery-menu';
-@import 'pane-gallery_artwork-info';
-@import 'pane-content';
+@import 'gallery';
+@import 'gallery_menu-general';
+@import 'gallery_control-arrows';
+@import 'gallery_control-menu';
+@import 'gallery_artwork-info';
+@import 'content_pane';
+@import 'content_section';
 @import 'nav';
-@import 'pane-content_section';
-@import 'logo-main';
+@import 'logo';
+@import 'footer';
 @import 'pages/index';
