--- a/scss/modules/pages/_index.scss
+++ b/scss/modules/pages/_index.scss
@@ -1,5 +1,4 @@
-@import './page-exhibitions';
-@import './page-contact';
-@import './page-submissions';
-@import './page-about';
-@import './page-footer';
+@import './exhibitions';
+@import './contact';
+@import './submissions';
+@import './about';
