--- a/scss/modules/_gallery_control-arrows.scss
+++ b/scss/modules/_gallery_control-arrows.scss
@@ -49,7 +49,7 @@
 
   @media screen and (max-width: $mobile) {
     .controls__inner {
-      padding-bottom: $space * 11;
+      padding-bottom: $space;
     }
   }
 }
