--- a/scss/modules/_nav.scss
+++ b/scss/modules/_nav.scss
@@ -99,6 +99,10 @@
       .list {
         padding-left: $space * 2;
       }
+
+      #nav-gallery {
+        background: rgba($black, 0.5);
+      }
     }
   }
 }
