--- a/scss/modules/_gallery_control-arrows.scss
+++ b/scss/modules/_gallery_control-arrows.scss
@@ -49,7 +49,11 @@
 
   @media screen and (max-width: $mobile) {
     .controls__inner {
-      padding-bottom: $space * 6;
+      padding-bottom: $space * 2;
+
+      &.safari {
+        padding-bottom: $space * 8.5;
+      }
     }
   }
 }
