--- a/scss/modules/pages/_exhibitions.scss
+++ b/scss/modules/pages/_exhibitions.scss
@@ -1,4 +1,16 @@
-.section-upcoming {
+.section-archive {
+  .list {
+    .archive-item {
+      cursor: pointer;
+
+      &:hover {
+        color: $colourAlt;
+      }
+    }
+  }
+}
+
+.section-upcoming, .section-archive {
   .list {
     .item {
       width: 66.66%;
