--- a/scss/modules/pages/_submissions.scss
+++ b/scss/modules/pages/_submissions.scss
@@ -3,7 +3,7 @@
     .section {
       .submissions-text {
         a {
-          font-size: 90%;
+          //font-size: 90%;
           color: $colourAlt;
           display: block;
         }
