--- a/scss/utils/_vars.scss
+++ b/scss/utils/_vars.scss
@@ -4,6 +4,7 @@ $colourSecondary: #444;
 $colourBackground: #4c474b;
 $colourBackgroundAlt: #2c272b;
 $colourAlt: #ff89da;
+$colourAltBlue: #89daff;
 $transparent: rgba($colourBackground, 0.5);
 $black: #000;
 $white: #eee;
@@ -33,6 +34,7 @@ $indexControls: 8;
 $indexLogo: 9;
 $indexNav: 9;
 $indexMobileLogo: 10;
+$indexAdmin: 20;
 
 // animation
 $transitionFast: 0.35s;
