--- a/scss/modules/pages/_archive.scss
+++ b/scss/modules/pages/_archive.scss
@@ -1,21 +1,17 @@
-.section-featured {
-  &.clickable {
-    cursor: pointer;
-
-    &:hover {
-      h1, p {
-        color: $colourAlt;
-      }
-    }
-  }
-}
-
-.section-upcoming {
+.section-archive {
   .list {
     .item {
       width: 66.66%;
       padding-top: $space * 2;
       padding-bottom: $space * 4;
+
+      &.archive-item {
+        cursor: pointer;
+
+        &:hover {
+          color: $colourAlt;
+        }
+      }
 
       &:last-child {
         padding-bottom: 0;
