video + 3d positional audio support

--- a/scss/modules/_gallery_artwork-info.scss
+++ b/scss/modules/_gallery_artwork-info.scss
@@ -72,6 +72,7 @@
     top: 0;
     right: 0;
     text-transform: uppercase;
+    text-decoration: underline;
 
     &:hover {
       color: $colourAlt;
