mobile disclaimer screen

--- a/scss/utils/_vars.scss
+++ b/scss/utils/_vars.scss
@@ -35,6 +35,7 @@ $indexLogo: 9;
 $indexNav: 9;
 $indexMobileLogo: 10;
 $indexAdmin: 20;
+$indexMobileWarning: 50;
 
 // animation
 $transitionFast: 0.35s;
