new gallery build

--- a/scss/modules/_mobile-warning.scss
+++ b/scss/modules/_mobile-warning.scss
@@ -46,6 +46,7 @@
       @include pad(2, 1);
       text-decoration: underline;
       text-transform: uppercase;
+      text-align: center;
       color: $colourAlt;
     }
   }
