--- a/scss/modules/_gallery_artwork-info.scss
+++ b/scss/modules/_gallery_artwork-info.scss
@@ -1,11 +1,11 @@
 .gallery-menu-artwork {
   width: 70vw;
-  height: 60vh;
+  max-height: 60vh;
   background-color: transparent;
   box-shadow: none;
-
+  
   .content {
-    @include pad(4, 2);
+    @include pad(2, 2);
     height: 100%;
     width: 100%;
     background-color: $colourBackgroundAlt;
@@ -39,7 +39,7 @@
       width: 55%;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: flex-end;
 
       .artwork-info {
         @include pad(2, 2);
