--- a/scss/modules/_gallery_menu-general.scss
+++ b/scss/modules/_gallery_menu-general.scss
@@ -19,6 +19,10 @@
       pointer-events: all;
     }
 
+    &.gallery-menu-artwork.active {
+      display: flex;
+    }
+
     .title {
       font-size: $fontHuge;
     }
