--- a/scss/modules/_nav.scss
+++ b/scss/modules/_nav.scss
@@ -8,6 +8,9 @@
   z-index: $indexNav;
   pointer-events: none;
 
+  font-family: $fontStackSerif;
+  
+
   .nav__inner {
     @extend .ext-grid;
     background-color: $colourBackground;
