--- a/scss/modules/pages/_archive.scss
+++ b/scss/modules/pages/_archive.scss
@@ -34,7 +34,7 @@
         }
 
         padding-left: $space * 2;
-        border-left: $border;
+        border-left: $borderThick;
         font-size: $fontLarge;
       }
 
