--- a/scss/utils/type.scss
+++ b/scss/utils/type.scss
@@ -1,9 +1,9 @@
-$fontStack: 'Karla', sans-serif;
-//$fontStack: 'Karla', sans-serif;
+$fontStack: 'Lato', sans-serif;
+$fontStackSerif: 'Playfair Display', sans-serif;
 $fontSmall: 12px;
 $fontSize: 17px;
 $fontLarge: 20px;
 $fontHuge: 40px;
-$lineHeight: 1.2;
+$lineHeight: 1.25;
 $letterSpacing: 1px;
 $wordSpacing: initial;
