--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-  Theme Name: Closed On Mondays
+  Theme Name: Closed On Monday Gallery
   Theme URI: http://xavierburrow.com/
   Author: Xavier Burrow
   Author URI: http://xavierburrow.com/
