--- a/scss/modules/_gallery.scss
+++ b/scss/modules/_gallery.scss
@@ -16,22 +16,24 @@
 
     // #canvas-target
     .canvas-wrapper__inner {
-      background: $black;
       position: relative;
       cursor: crosshair;
       box-shadow: $boxShadow;
       touch-action: none;
+      outline: 2px solid blue;
 
       &.clickable {
         cursor: pointer;
       }
-      
+
       canvas {
-        margin: 0;
-        padding: 0;
         position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         opacity: 0;
-        transition: opacity $transitionVerySlow;
+        transition: opacity $transitionSlow;
+        pointer-events: none;
 
         &.active {
           opacity: 1;
