--- a/scss/utils/utils.scss
+++ b/scss/utils/utils.scss
@@ -1,4 +1,4 @@
-@mixin pad($x, $y) {
+@mixin padding($x, $y) {
 	padding-left: $x * $space;
 	padding-right: $x * $space;
 	padding-top: $y * $space;
@@ -10,28 +10,4 @@
 	margin-right: $x * $space;
 	margin-top: $y * $space;
 	margin-bottom: $y * $space;
-}
-
-.ext-grid {
-	background-size: $gridSize $gridSize;
-  background-image: $backgroundGrid;
-}
-
-.ext-grid-alt {
-	background-size: $gridSize*2 $gridSize*2;
-  background-image: $backgroundGrid;
-}
-
-.mobile-show {
-	display: none;
-}
-
-@media screen and (max-width: $mobile) {
-	.mobile-hide {
-		display: none;
-	}
-
-	.mobile-show {
-		display: block;
-	}
 }
